--- a/ICT4Events/ICT4Events.csproj
+++ b/ICT4Events/ICT4Events.csproj
@@ -105,6 +105,7 @@
     <Compile Include="CampingPlace.cs" />
     <Compile Include="CampingPlaceManager.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="CategoryManager.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="CommentManager.cs" />
     <Compile Include="CommentNewsfeedItem.cs">
