--- a/ICT4Events/ICT4Events.csproj
+++ b/ICT4Events/ICT4Events.csproj
@@ -251,6 +251,7 @@
     <EmbeddedResource Include="ToegangscontroleSysteem.resx">
       <DependentUpon>ToegangscontroleSysteem.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="ICT4Events_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
