Gui uiterlijk verbeterd

--- a/ICT4Events/ICT4Events.csproj
+++ b/ICT4Events/ICT4Events.csproj
@@ -284,8 +284,10 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <Content Include="Resources\logo transparant.jpg" />
+    <None Include="Resources\logo transparant1.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
