--- a/ICT4Events/ICT4Events.csproj
+++ b/ICT4Events/ICT4Events.csproj
@@ -203,6 +203,12 @@
     </Compile>
     <Compile Include="Tag.cs" />
     <Compile Include="TagManager.cs" />
+    <Compile Include="Testform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Testform.Designer.cs">
+      <DependentUpon>Testform.cs</DependentUpon>
+    </Compile>
     <Compile Include="ToegangscontroleSysteem.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -247,6 +253,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SocialSharing.resx">
       <DependentUpon>SocialSharing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Testform.resx">
+      <DependentUpon>Testform.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ToegangscontroleSysteem.resx">
       <DependentUpon>ToegangscontroleSysteem.cs</DependentUpon>
